--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: aliceblue;
+  font-size: 1rem;
+}
+.App {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+h2 {
+  font-size: 2rem;
+  font-weight: 600;
+  padding-left: 2rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@media screen and (max-width: 690px) {
+  .filter-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+button {
+  max-height: fit-content;
+  min-height: 2rem;
+  border-radius: 0.7rem;
+}
+th > button {
+  border: none;
+  font-weight: inherit;
+}
+form {
+  width: 80vw;
+  display: flex;
+  margin: auto;
+  justify-content: flex-end;
+  padding: 0.5rem;
+}
+label {
+  margin-right: 1rem;
+}
+input {
+  height: 2rem;
+  text-align: center;
+  border-radius: 0.7rem;
+  margin-right: 1rem;
+}
+input[type="submit"] {
+  background-color: RGB(4, 169, 109);
+}
+.divider > button {
+  background-color: gray;
+  color: #fff;
+}
+.upload-container {
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: flex-end;
+  height: fit-content;
+  align-items: center;
+}
+.table-filter-wrap {
+  text-align: center;
+  width: 80vw;
+  margin: auto;
+}
+.filter-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.divider {
+  display: flex;
+  align-items: center;
+}
+table {
+  margin: auto;
+  text-align: center;
+  width: 80vw;
+  border-width: 0.3rem;
+  border-collapse: collapse;
+}
+th {
+  border-width: 0.3rem;
+}
+tbody >tr {
+  border-bottom: 0.3rem solid black;
+}
+td {
+  border: none;
+}
+li {
+  list-style: none;
 }
